top z-index fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -349,6 +349,13 @@ header {
   z-index: 3000; /* ヘッダーのz-indexより大きい値に設定（適当な値） */
 }
 
+.backindex {
+  z-index: 0
+}
+
+.frontindex {
+  z-index: 1
+}
 
 @media (max-width: 768px) {
   .container-fluid {
@@ -622,7 +629,7 @@ header {
   .admin-nav li a {
     display: block;
   }
-  
+
   .custom_filter {
     gap: 5px;
   }
@@ -643,19 +650,19 @@ header {
   transform: scale(1); /* 中央にきたメインスライドが通常サイズに拡大 */
   opacity: 1; /* スライドの透明度を1に設定し透明じゃなくする */
   }
-  
+
   .slider img {
     width: 120px;
     height: 100px;
   }
-  
+
   .slick-slide img {
     height: 10vw;
     max-height: 297px;
     min-height: 90px;
     margin: 5px 0 0 20px;
   }
-  
+
   .slick-slide {
     -webkit-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
@@ -664,7 +671,7 @@ header {
   .is--active {
     transform: scale( 1 );
   }
-  
+
   .custom-comment {
     word-wrap: break-word;
     overflow-wrap: break-word;
